--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+
+  <!-- CSS Script -->
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
@@ -50,13 +52,15 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 font="Montserrat-black">Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn btn-lg"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-dark btn btn-lg"><i class="fab fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-dark btn btn-lg download_button"><i class="fab fa-apple"></i>
+            Download</button>
+          <button type="button" class="btn btn-outline-light btn btn-lg download_button"><i
+              class="fab fa-google-play"></i> Download</button>
         </div>
 
 
         <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title_image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -67,14 +71,38 @@
 
   <section id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <!-- Made class for Check Mark, Bullseye, and Heart. Added "col-lg-4" -->
+    <!-- To use "col's" you must put it in a class titled "row", for Bootstrap to render the CSS required -->
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+    <div class="row">
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+      <!-- Check Mark CSS -->
+      <div class="feature-box col-lg-4">
+        <!-- To get the "check circle" to be 4 times the size, need to add "fa-4x" -->
+        <!-- to edit the "check circle" add the word "icon" in front of "fas..." to create an icon class -->
+        <i class="icon fas fa-check-circle fa-4x"></i>
+        <h3>Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+
+      <!-- Bullseye CSS -->
+      <div class="feature-box col-lg-4">
+        <!-- To get the "bullseye" to be 4 times the size, need to add "fa-4x" -->
+        <!-- to edit the "bullseye" add the word "icon" in front of "fas..." to create an icon class -->
+        <i class="icon fas fa-bullseye fa-4x"></i>
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+
+      <!-- Heart CSS -->
+      <div class="feature-box col-lg-4">
+        <!-- To get the "heart" to be 4 times the size, need to add "fa-4x" -->
+        <!-- to edit the "heart" add the word "icon" in front of "fas..." to create an icon class -->
+        <i class="icon fas fa-heart fa-4x"></i>
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
   </section>
 
