--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- Title/Section 1 -->
       <div class="row">
         <div class="col-lg-6">
-          <h1 font="Montserrat-black">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big_heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn btn-lg download_button"><i class="fab fa-apple"></i>
             Download</button>
           <button type="button" class="btn btn-outline-light btn btn-lg download_button"><i
@@ -70,8 +70,7 @@
 
     <!-- Made class for Check Mark, Bullseye, and Heart. Added "col-lg-4" -->
     <!-- To use "col's" you must put it in a class titled "row", for Bootstrap to render the CSS required -->
-
-    <div class="row">
+    <div class="container-fluid row">
 
       <!-- Check Mark CSS -->
 
@@ -79,7 +78,7 @@
         <!-- To get the "check circle" to be 4 times the size, need to add "fa-4x" -->
         <!-- to edit the "check circle" add the word "icon" in front of "fas..." to create an icon class -->
         <i class="icon fas fa-check-circle fa-4x"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="feature_title">Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
 
@@ -89,7 +88,7 @@
         <!-- To get the "bullseye" to be 4 times the size, need to add "fa-4x" -->
         <!-- to edit the "bullseye" add the word "icon" in front of "fas..." to create an icon class -->
         <i class="icon fas fa-bullseye fa-4x"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="feature_title">Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
 
@@ -99,7 +98,7 @@
         <!-- To get the "heart" to be 4 times the size, need to add "fa-4x" -->
         <!-- to edit the "heart" add the word "icon" in front of "fas..." to create an icon class -->
         <i class="icon fas fa-heart fa-4x"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="feature_title">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
@@ -111,13 +110,15 @@
     <!-- added Bootstrap Carousel to HTML with Testimonials -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4500">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial_text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+            TinDog. Woof.</h2>
           <img class="testimonials_img" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+
+        <div class="carousel-item container-fluid">
+          <h2 class="testimonial_text">My dog used to be so lonely, but with TinDog's help, they've found the love of
             their life. I think.</h2>
           <img class="testimonials_img" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
@@ -165,7 +166,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="price_text">Free</h2>
             <p>✅ 5 Matches Per Day</p>
             <p>✅ 10 Messages Per Day</p>
             <p>✅ Unlimited App Usage</p>
@@ -184,13 +185,13 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="price_text">$49 / mo</h2>
             <p>✅ Unlimited Matches</p>
             <p>✅ Unlimited Messages</p>
             <p>✅ Unlimited App Usage</p>
             <p>✅ 25 Likes Per Hour</p>
             <p>❌ Pirority Listing</p>
-            
+
             <button class="col-12 mx-auto btn btn-lg btn-block btn btn-outline-success" type="button">Sign Up</button>
           </div>
         </div>
@@ -198,41 +199,46 @@
       <!-- Mastiff Card -->
       <div class="pricing_column col-lg-4 col-md-12">
         <div class="card">
-          <div class="card-header"><h3>Mastiff</h3>
-        </div>
-        <div class="card-body">
-          <h2>$99 / mo</h2>
-          <p>✅ Unlimited Matches</p>
-          <p>✅ Unlimited Messages</p>
-          <p>✅ Unlimited App Usage</p>
-          <p>✅ Unlimited Likes Per Hour</p>
-          <p>✅ Pirority Listing</p>
-          <button class="col-12 mx-auto btn btn-lg btn-block btn btn-outline-primary" type="button">Sign Up</button>
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="price_text">$99 / mo</h2>
+            <p>✅ Unlimited Matches</p>
+            <p>✅ Unlimited Messages</p>
+            <p>✅ Unlimited App Usage</p>
+            <p>✅ Unlimited Likes Per Hour</p>
+            <p>✅ Pirority Listing</p>
+            <button class="col-12 mx-auto btn btn-lg btn-block btn btn-outline-primary" type="button">Sign Up</button>
+          </div>
         </div>
       </div>
-    </div>
   </section>
 
-  <!-- Call to Action/Section 5 -->
+  <!-- Call to Action(CTA)/Section 5 -->
   <!-- Added Social Media Buttons with designated logo's -->
 
   <section id="cta">
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn btn-lg download_button"><i class="fab fa-apple"></i>
-      Download</button>
-    <button type="button" class="btn btn-outline-light btn btn-lg download_button"><i
-        class="fab fa-google-play"></i> Download</button>
+    <div class="container-fluid">
+      <h3 class="big_heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-dark btn btn-lg download_button"><i class="fab fa-apple"></i>
+        Download</button>
+      <button type="button" class="btn btn-outline-light btn btn-lg download_button"><i class="fab fa-google-play"></i>
+        Download</button>
+    </div>
   </section>
 
   <!-- Footer/Section 6 -->
   <!-- Added "span's" to not effect above download buttons -->
 
   <footer id="footer">
-    <span class="fab fa-twitter"></span>
-    <span class="fab fa-facebook-f"></span>
-    <span class="fab fa-instagram"></span> 
-    <span class="fas fa-envelope"></span>
-    <p>© Copyright 2022 TinDog</p>
+    <div class="container-fluid">
+      <span class="fab fa-twitter"></span>
+      <span class="fab fa-facebook-f"></span>
+      <span class="fab fa-instagram"></span>
+      <span class="fas fa-envelope"></span>
+      <p>© Copyright 2022 TinDog</p>
+    </div>
   </footer>
 
 </body>
