Fixed NavBar Download Button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"> <a class="nav-link" href="#footer">Contact</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#pricing">Pricing</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#cta">Download</a>
+            <li class="nav-item"> <a class="nav-link" href="#download">Download</a>
             </li>
           </ul>
         </div>
@@ -223,7 +223,7 @@
   <!-- Call to Action/Section 5 -->
 
   <!-- Added Social Media Buttons with designated logo's -->
-  <section class="colored-section">
+  <section class="colored-section" id="download">
     <div class="container-fluid">
       <h3 class="big_heading">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="btn btn-dark btn btn-lg download_button"><i class="fab fa-apple"></i>
